--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "browser-sync": "^2.11.2",
     "gulp": "^3.9.1",
+    "gulp-sass": "^2.3.2",
     "minimist": "^1.2.0",
     "patternlab-node": "pattern-lab/patternlab-node#v2.0.0-alpha",
     "styleguidekit-assets-default": "pattern-lab/styleguidekit-assets-default#feature-panels",
